--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
-.gray-background {
-  background:darkgray;
+body {
+  width:1520px;
+  margin: 0 auto;
+}
+
+.black-nav {
+  background-color: black;
+  width: 100%;
+  color: white;
+  padding: 20px;
+  font-weight: 600;
+}
+
+  
+.list {
+    margin-top:  30px;  
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: left;
+}
+.titleChange {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.Modal {
+  background-color: gray;
+  color: black;
 }
