--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 body {
   width:1520px;
   margin: 0 auto;
+  user-select: none;
+    -ms-user-select: 'none';
+    -moz-user-select: 'none';
+    -webkit-user-select: none;
+
 }
 
 .black-nav {
@@ -28,4 +33,20 @@ body {
 .Modal {
   background-color: gray;
   color: black;
+}
+.checkbox{
+  cursor: pointer;
+}
+.likeButton{
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    width: 100%;
+    margin: 0 auto
+  }
+  .form {
+    text-align: center;
+  }
 }
