--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,24 @@ body {
     -moz-user-select: 'none';
     -webkit-user-select: none;
 }
+.navMenu {
+  margin: 0 auto;
+  
+}
+
+a {
+text-decoration: none;
+color: black;
+}
 .menu{
+  display: flex;
+  width:100%;
   margin-top: 20px;
 }
 .menuList {
-  margin: 0px;
+  width: 380px;
+  padding: 0;
+  margin: 5px;
   border:1px solid black ;
   background-image: cover;
 }
