--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 
-
+body {
+  width:1520px;
+  margin: 0 auto;
+  user-select: none;
+    -ms-user-select: 'none';
+    -moz-user-select: 'none';
+    -webkit-user-select: none;
+}
 .success{
     background-color: lightgreen;
   }
