--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,35 @@ color: black;
   padding: 20px;
   font-weight: 600;
 }
+.join {
+  margin-top: 20px;
+  text-align: center;
+}
+.join h3 {
+  border: 1px solid black;
+  height: 50px;
+  width: 500px;
+  display: inline-block;
+  line-height: 50px;
+}
 
-  
+form div {
+  text-align: center;
+  padding: 0;
+  margin-top: 20px;
+  display: inline-block;
+}
+.login {
+
+
+  text-align: center;
+}
+  .login >img {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
 .list {
     margin-top:  30px;  
     padding-left: 20px;
